[package]
name = "second_weekend"
version = "0.1.0"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
lazy_static = "1.4.0"
ordered-float = "2.1.1"
rand = "0.8.3"
